--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ const selection = (new URLSearchParams(location.search).get('boss') || '').split
 const S = 1000
 const M = 60*S
 const H = 60*M
-const initialTime = 1605342000000
+const initialTime = 1605342000000 + 3*M + 20*S
 const bossEntries = Object.entries({
   174067: "Noth the Plaguebringer",
   174066: "Patchwerk",
